--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
                 </li>
             </ul>
         </nav>
+        <header class="header">
+            <div class="header__content">
+                <h1 class="title">Hey</h1>
+                <h1 class="title orange">I'm Ryan.</h1>
+                <p class="header__para">
+                    I'm a <b class="orange">Frontend Software Engineer</b> with a strong passion for building 
+                    web applications with great user experiences. 
+                    <br>
+                    Here is a bit more <b class="orange">about me.</b>
+                </p>
+                <div class="social__list">
+                    <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="social__link click">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/ryanmello" target="_blank" class="social__link click">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="./assets/David Bragg Resume.pdf" target="blank" class="social__link click">
+                        <i class="fas fa-file-pdf"></i>
+                    </a>
+                </div>
+            </div>
+        </header>
     </section>
 </body>
 </html>
