mail and scroll icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav__link">
                     <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">Contact</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link click">
                     <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black"><i class="fas fa-adjust"></i></a>
                 </li>
             </ul>
@@ -52,6 +52,12 @@
                 </div>
             </div>
         </header>
+        <button class="mail__btn click">
+            <i class="fas fa-envelope"></i>
+        </button>
+        <a href="#projects" class="scroll">
+            <div class="scroll__icon click"></div>
+        </a>
     </section>
 </body>
 </html>
