--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <header class="header">
             <div class="header__content">
                 <h1 class="title">Hey</h1>
-                <h1 class="title orange">I'm Ryan.</h1>
+                <h1 class="title purple">I'm Ryan.</h1>
                 <p class="header__para">
-                    I'm a <b class="orange">Frontend Software Engineer</b> with a strong passion for building 
+                    I'm a <b class="purple">Frontend Software Engineer</b> with a strong passion for building 
                     web applications with great user experiences. 
                     <br>
-                    Here is a bit more <b class="orange">about me.</b>
+                    Here is a bit more <b class="purple">about me.</b>
                 </p>
                 <div class="social__list">
                     <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="social__link click">
@@ -58,6 +58,67 @@
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">
+                    Here are some of my <span class="purple">projects</span>
+                </h1>
+                <ul class="project___list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Project
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga incidunt veritatis, dicta nesciunt repudiandae consequuntur unde molestiae nam officia corrupti et doloribus quam distinctio perferendis consectetur obcaecati ipsam qui minus.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Project
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga incidunt veritatis, dicta nesciunt repudiandae consequuntur unde molestiae nam officia corrupti et doloribus quam distinctio perferendis consectetur obcaecati ipsam qui minus.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 </html>
