--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
                 <img id="footer__personal-logo" src="https://mir-s3-cdn-cf.behance.net/projects/404/6f7a86119465845.Y3JvcCwzMDAwLDIzNDYsMCwzMTE.png" alt="">
             </figure>
             <div class="footer__social--list">
-                <a href="#" class="footer__social--link link__hover-effect link__hover--white">
+                <a href="https://github.com/ryanmello" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
                     GitHub
                 </a>
-                <a href="#" class="footer__social--link link__hover-effect link__hover--white">
+                <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
                     LinkedIn
                 </a>
                 <a href="#" class="footer__social--link link__hover-effect link__hover--white">
                     Contact
                 </a>
-                <a href="#" class="footer__social--link link__hover-effect link__hover--white">
+                <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
                     Resume
                 </a>
             </div>
