--- a/index.html
+++ b/index.html
@@ -120,27 +120,29 @@
             </div>
         </div>
     </section>
-    <footer id="footer">
-        <div class="container footer__container">
-            <figure class="img__footer">
-                <img id="footer__personal-logo" src="https://mir-s3-cdn-cf.behance.net/projects/404/6f7a86119465845.Y3JvcCwzMDAwLDIzNDYsMCwzMTE.png" alt="">
-            </figure>
-            <div class="footer__social--list">
-                <a href="https://github.com/ryanmello" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
-                    GitHub
-                </a>
-                <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
-                    LinkedIn
-                </a>
-                <a href="#" class="footer__social--link link__hover-effect link__hover--white">
-                    Contact
-                </a>
-                <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover--white">
-                    Resume
-                </a>
-            </div>
-            <div class="footer__copyright">
-                Copyright © 2022 Ryan Mello
+    <footer>
+        <div class="container">
+            <div class="row footer__row">
+                <figure class="img__footer">
+                    <img id="footer__personal-logo" src="https://mir-s3-cdn-cf.behance.net/projects/404/6f7a86119465845.Y3JvcCwzMDAwLDIzNDYsMCwzMTE.png" alt="">
+                </figure>
+                <div class="footer__social--list">
+                    <a href="https://github.com/ryanmello" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        GitHub
+                    </a>
+                    <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        LinkedIn
+                    </a>
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        Contact
+                    </a>
+                    <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        Resume
+                    </a>
+                </div>
+                <div class="footer__copyright">
+                    Copyright © 2022 Ryan Mello
+                </div>
             </div>
         </div>
     </footer>
