--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Ryan Mello</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("hVSlTNnIR0WxRDtF3");
+        })();
+    </script>
 </head>
 <body>
     <section id="landing-page">
@@ -89,10 +98,10 @@
             <div class="modal__half modal__contact">
                 <h3 class="modal__title modal__title--contact">Let's have a chat</h3>
                 <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities</h4>
-                <form id="contact__form" action="">
+                <form id="contact__form" onsubmit="contact(event)">
                     <div class="form__item">
                         <label  class="form__item--label">Name</label>
-                        <input  class="input" name="user_name" type="text" required></input>
+                        <input  class="input" name="user_name" type="text" ></input>
                     </div>
                     <div class="form__item">
                         <label  class="form__item--label">Email</label>
@@ -100,7 +109,7 @@
                     </div>
                     <div class="form__item">
                         <label  class="form__item--label">Message</label>
-                        <textarea class="input" name="message" type="text" required></textarea>
+                        <textarea class="input" name="message" type="text" ></textarea>
                     </div>
                     <button id="contact__submit" class="form__submit">
                         Send it my way
