--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </header>
-        <button class="mail__btn click">
+        <button class="mail__btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
         </button>
         <a href="#projects" class="scroll">
@@ -101,7 +101,7 @@
                 <form id="contact__form" onsubmit="contact(event)">
                     <div class="form__item">
                         <label  class="form__item--label">Name</label>
-                        <input  class="input" name="user_name" type="text" ></input>
+                        <input  class="input" name="user_name" type="text" autocomplete="do-not-autofill" required></input>
                     </div>
                     <div class="form__item">
                         <label  class="form__item--label">Email</label>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="form__item">
                         <label  class="form__item--label">Message</label>
-                        <textarea class="input" name="message" type="text" ></textarea>
+                        <textarea class="input" name="message" type="text" required></textarea>
                     </div>
                     <button id="contact__submit" class="form__submit">
                         Send it my way
@@ -122,7 +122,7 @@
                     Thanks for the message! Looking forward to speaking with you soon.
                 </div>
             </div>
-            <i class="fas fa-times modal__exit click"></i>
+            <i class="fas fa-times modal__exit click" onclick="closeModal()"></i>
         </div>
     </section>
     <section id="projects">
