--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 </div>
             </div>
             <div class="modal__half modal__contact">
+                <i class="fas fa-times modal__exit click"></i>
                 <h3 class="modal__title modal__title--contact">Let's have a chat</h3>
                 <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities</h4>
                 <form id="contact__form" onsubmit="contact(event)">
@@ -122,7 +123,6 @@
                     Thanks for the message! Looking forward to speaking with you soon.
                 </div>
             </div>
-            <i class="fas fa-times modal__exit click" onclick="closeModal()"></i>
         </div>
     </section>
     <section id="projects">
