--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                 <img id="personal-logo" src="https://mir-s3-cdn-cf.behance.net/projects/404/6f7a86119465845.Y3JvcCwzMDAwLDIzNDYsMCwzMTE.png" alt="">
             </figure>
             <ul class="nav__link--list">
-                <li class="nav__link" onclick="toggleModal()">
-                    <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">About</a>
-                </li>
                 <li class="nav__link">
                     <a href="#projects" class="nav__link--anchor link__hover-effect link__hover-effect--black">Projects</a>
                 </li>
@@ -199,7 +196,7 @@
                     <a href="https://www.linkedin.com/in/ryan-mello-778a161b9/" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
                         LinkedIn
                     </a>
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="#" onclick="toggleModal()" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Contact
                     </a>
                     <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
