--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
                 <ul class="project___list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <img src="./assets/screen (1).jpg" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Car Sales Project
+                                    SpaceX Website
                                 </h3>
                                 <h4 class="project__description--sub-title">
                                     HTML, CSS, JavaScript
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga incidunt veritatis, dicta nesciunt repudiandae consequuntur unde molestiae nam officia corrupti et doloribus quam distinctio perferendis consectetur obcaecati ipsam qui minus.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque enim laudantium, ad veritatis sit.
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://github.com/ryanmello/spacex-clone" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="#" class="project__description--link">
