--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                 <ul class="project___list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/screen (1).jpg" class="project__img" alt="">
+                            <img src="./assets/tesla-stretch.jpg" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    SpaceX Website
+                                    Tesla Website Clone
                                 </h3>
                                 <h4 class="project__description--sub-title">
                                     HTML, CSS, JavaScript
