qr code generator project

--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
                 <ul class="project___list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/tesla-stretch.jpg" class="project__img" alt="">
+                            <img src="./assets/qr-site-image.jpg" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Tesla Website Clone
+                                    QR Code Generator
                                 </h3>
                                 <h4 class="project__description--sub-title">
-                                    HTML, CSS, JavaScript
+                                    React, Javascript, Tailwind CSS, QRCode.js, Node.js
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eaque enim laudantium, ad veritatis sit.
+                                    The QR Code Generator takes in any website link and generates an active QR Code that, when scanned, directs the user to the site
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="https://github.com/ryanmello/spacex-clone" class="project__description--link">
+                                    <a href="https://github.com/ryanmello/qr-code-generator" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="#" class="project__description--link">
