--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://github.com/ryanmello" target="_blank" class="social__link click">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="./assets/David Bragg Resume.pdf" target="blank" class="social__link click">
+                    <a href="./assets/resume.pdf" target="blank" class="social__link click">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -71,24 +71,38 @@
                 <p class="modal__para">
                     I'm a 18 year old <b class="purple">frontend software engineer</b> with a strong passion for developing websites with great <b class="purple">user experiences</b>.
                     <br>
-                    I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most <b class="purple">talented</b> and <b class="purple">experienced</b> software engineers everyday.
+                    I currently work on difficult engineering problems and building <b class="purple">responsive</b> and <b class="purple">interactive</b> web applications.
                 </p>
                 <div class="modal__languages">
                     <figure class="modal__language">
-                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/2048px-Unofficial_JavaScript_logo_2.svg.png" alt="">
-                        <span class="language__name">JS</span>
+                        <img class="modal__language--img" src="./assets/java-icon.png" alt="">
+                        <span class="language__name">Java</span>
                     </figure>
                     <figure class="modal__language">
                         <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/2048px-Unofficial_JavaScript_logo_2.svg.png" alt="">
                         <span class="language__name">JS</span>
                     </figure>
                     <figure class="modal__language">
-                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/2048px-Unofficial_JavaScript_logo_2.svg.png" alt="">
-                        <span class="language__name">JS</span>
+                        <img class="modal__language--img" src="./assets/html-icon.png" alt="">
+                        <span class="language__name">HTML</span>
                     </figure>
                     <figure class="modal__language">
-                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/2048px-Unofficial_JavaScript_logo_2.svg.png" alt="">
-                        <span class="language__name">JS</span>
+                        <img class="modal__language--img" src="./assets/css-icon.png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/react-icon.png" alt="">
+                        <span class="language__name">React</span>
+                    </figure><figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/tailwind-icon.png" alt="">
+                        <span class="language__name">Tailwind</span>
+                    </figure>
+                    </figure><figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/mongodb-icon.png" alt="">
+                        <span class="language__name">MongoDB</span>
+                    </figure></figure><figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/nodejs-icon.png" alt="">
+                        <span class="language__name">Nodejs</span>
                     </figure>
                 </div>
             </div>
@@ -147,7 +161,7 @@
                                     <a href="https://github.com/ryanmello/qr-code-generator" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://ryanmello.github.io/qr-code-generator/" target="_blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -156,23 +170,26 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <img src="./assets/drag-drop.jpg" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Car Sales Project
+                                    Drag and Drop Application
                                 </h3>
                                 <h4 class="project__description--sub-title">
                                     HTML, CSS, JavaScript
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga incidunt veritatis, dicta nesciunt repudiandae consequuntur unde molestiae nam officia corrupti et doloribus quam distinctio perferendis consectetur obcaecati ipsam qui minus.
+                                    The Drag and Drop application randomly displays the Top 10 Richest People in an unsorted order and allows the user to drag and drop each individual person 
+                                    into their respective spot on the list. 
+                                    You can actively check your progress throughout and when each person is in the right spot the game is over and 
+                                    confetti cover the screen.
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://github.com/ryanmello/drag-drop" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="#" class="project__description--link">
+                                    <a href="" target="_blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -199,7 +216,7 @@
                     <a href="#" onclick="toggleModal()" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Contact
                     </a>
-                    <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="./assets/resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Resume
                     </a>
                 </div>
