--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     QR Code Generator
                                 </h3>
                                 <h4 class="project__description--sub-title">
-                                    React, Javascript, Tailwind CSS, QRCode.js, Node.js
+                                    Javascript, Tailwind CSS, QRCode.js, Node.js
                                 </h4>
                                 <p class="project__description--para">
                                     The QR Code Generator takes in any website link and generates an active QR Code that, when scanned, directs the user to the site
@@ -189,7 +189,7 @@
                                     <a href="https://github.com/ryanmello/drag-drop" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="" target="_blank" class="project__description--link">
+                                    <a href="https://ryanmello.github.io/drag-drop/" target="_blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
