--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <h1 class="title">Hey</h1>
                 <h1 class="title purple">I'm Ryan.</h1>
                 <p class="header__para">
-                    I'm a <b class="purple">Frontend Software Engineer</b> with a strong passion for building 
-                    web applications with great user experiences. 
+                    I'm a <b class="purple">Software Engineer</b> with a strong passion for building 
+                    impactful applications with great user experiences. 
                     <br>
                     Here's a bit more <b class="purple click" onclick="toggleModal()">about me.</b>
                 </p>
@@ -57,6 +57,7 @@
                     </a>
                 </div>
             </div>
+            
         </header>
         <button class="mail__btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
@@ -67,11 +68,12 @@
         <div class="modal">
             <div class="modal__half modal__about">
                 <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
-                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+                <h4 class="modal__sub-title modal__sub-title--about">Software Engineer</h4>
                 <p class="modal__para">
-                    I'm a 18 year old <b class="purple">frontend software engineer</b> with a strong passion for developing websites with great <b class="purple">user experiences</b>.
+                    I'm a <b class="purple">software engineer</b> with a strong passion for developing impactful applications with great <b class="purple">user experiences.</b>
                     <br>
-                    I currently work on difficult engineering problems and building <b class="purple">responsive</b> and <b class="purple">interactive</b> web applications.
+                    I am currently working on improving as an engineer by <b class="purple">learning new skills</b>, improving on the ones I already have, and building projects
+                    with <b class="purple">clean</b> and <b class="purple">resuable code.</b>
                 </p>
                 <div class="modal__languages">
                     <figure class="modal__language">
@@ -221,7 +223,7 @@
                     </a>
                 </div>
                 <div class="footer__copyright">
-                    Copyright © 2022 Ryan Mello
+                    Copyright © 2023 Ryan Mello
                 </div>
             </div>
         </div>
