--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </a>
                 </div>
                 <div class="footer__copyright">
-                    Copyright © 2023 Ryan Mello
+                    2023 Ryan Mello
                 </div>
             </div>
         </div>
